--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,15 @@
 <!doctype html>
-<html lang="en">
+<html lang="ar">
 <head>
   <meta charset="utf-8">
-  <title>App</title>
+  <title>Fish Market</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/images/logo.ico">
+  <script type="text/javascript"
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCNGOsBBZo9vf0Tw4w6aJiilSTFVfQ5GPI"></script>
 </head>
-<body>
+<body dir="rtl">
   <app-root></app-root>
 </body>
 </html>
